Add withdraw command and update deposit command